# CrowPanel-4.3-HMI-ESP32-Display-480x272

./: CrowPanel 2.4-ESP32 HMI 320x240.rar  readme.md
example/: readme.md
example/Arduino/Arduino_Tutorial_43/: readme.md
example/Arduino/Arduino_Tutorial_43/example_code/: example_code.ino  ui.h
example/Arduino/Arduino_Tutorial_43/libraries/: UI-4.3-BLUE.rar
example/Arduino/Arduino_Tutorial_43/libraries/UI/: ui.c  ui.h  ui_img_crowpanel_ui_bj_dis06043h_png.c
example/Arduino/HA_MQTT_Arduino_43/: readme.md
example/ESP_IDF/CrowPanel_ESP32_4.3/: CMakeLists.txt  sdkconfig.old
example/ESP_IDF/CrowPanel_ESP32_4.3/main/: CMakeLists.txt  CrowPanel_ESP32_4.3.cpp
example/Esphome/: 4.3_ESPHome.yaml
example/Micropython/4.3-inch-ESP32-MicroPython/Examples/: CrowPanel_ESP32_4.3.py  biaopan-4.3.py  button-1-4.3.py  play_tone.py  uart.py
example/Micropython/4.3-inch-ESP32-MicroPython/LVGL-DEMO/ui/: ui.py  ui_images.py
example/PlatformIO/CrowPanel_ESP32_4.3 - MQTT/: platformio.ini
factory_sourecode/HMI-4.3/LvglWidgets-4.3/: LvglWidgets-4.3.ino
