idf_component_register(SRCS "CrowPanel_ESP32_4.3.cpp"
                    INCLUDE_DIRS "."
                    "../components/arduino-esp32-master"                 
                    "../components/lvgl-3"
                    "../components/UI"
                    "../components/XPT2046_Touchscreen" 
                    "../components/Arduino_GFX-master"                  
                    )
